--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 # Base application URL used by tests
-base.url=http://www.indifi.com/
+base.url=http://www.google.com/
 
 # Default browser: chrome, firefox, safari, edge
 # You can append -headless (eg. chrome-headless) to run headless where supported
